--- a/GameServer/PakcetGenerator/PacketGenerator.csproj
+++ b/GameServer/PakcetGenerator/PacketGenerator.csproj
@@ -16,4 +16,8 @@
     <OutputPath>bin\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.12.3" />
+  </ItemGroup>
+
 </Project>
